current version
===============

features:
- added SOS2 example
- extended TSP example

plugins:
- added first version of SOS type 1 constraint handler (cons_sos.{c,h})

fixed bugs:
- fixed handling of unbounded variables with 0 objective in SCIPlpGetModifiedPseudo[Proved]Objval() (lp.c)
- fixed CTRL-C if NO_SIGACTION is set (e.g., for MinGW)
- fixed bug that a missing CONSTRANS in constraint handler leads to NULL pointer as constraint data for the
  copied constraints instead of pointer copies of the consdata (as explained in the constraint handler "HowTo")
- fixed bug with reading empty lines in TSP example

SCIP version 1.00
=================

compiling:
- added .exe extension to binaries of MinGW
- added "LPS=none" for compiling SCIP without a LP solver
- modified the default LP solver to be SoPlex instead of CPLEX
- removed the ".static" extension associated to the LINK variable from the Makefile system
  (If you want to build makefiles for shared library generation, use the OPT variable. For example,
  you could create a makefile "make/make.linux.x86.gnu.opt-shared" and compile it with "make OPT=opt-shared".)
- added version numbers to library files
  (There will be a softlink generated in the lib/ and bin/ directories without version number that
  point to the latest compiled version.)
- made ZIMPL=true the default; if you do not want to include ZIMPL support, call "make ZIMPL=false"

interface:
- new callback method SCIPdialogFree()
- new method SCIPreadSol()
- new method SCIPgetVarRedcost()
- new method SCIPnodeUpdateLowerboundLP()
- linear and knapsack constraint handler may now deal with coefficients of value zero
- parameters are now separated into basic and advanced, the latter ones have been moved to extra submenus
- new method SCIPwriteMIP()
- calling SCIPwriteLP is now possible in Solved Stage
- new parameter "maxbounddist" for SCIPincludeSepa() and constructor ObjSepa()
- new method SCIPsepaGetMaxbounddist()