@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons_varbound.c,v 1.63 2007/08/24 16:02:19 bzfberth Exp $"
+#pragma ident "@(#) $Id: cons_varbound.c,v 1.64 2007/10/16 14:57:47 bzfheinz Exp $"
 
 /**@file   cons_varbound.c
  * @brief  constraint handler for variable bound constraints
@@ -1575,7 +1575,7 @@ SCIP_RETCODE SCIPincludeConshdlrVarbound(
          eventhdlrdata) );
 
    /* include the linear constraint upgrade in the linear constraint handler */
-   SCIP_CALL( SCIPincludeLinconsUpgrade(scip, linconsUpgdVarbound, LINCONSUPGD_PRIORITY) );
+   SCIP_CALL( SCIPincludeLinconsUpgrade(scip, linconsUpgdVarbound, LINCONSUPGD_PRIORITY, CONSHDLR_NAME) );
 
    return SCIP_OKAY;
 }
