@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: def.h,v 1.133 2007/08/29 10:35:02 bzfpfend Exp $"
+#pragma ident "@(#) $Id: def.h,v 1.134 2007/10/16 14:57:47 bzfheinz Exp $"
 
 /**@file   def.h
  * @brief  common defines and data types used in all packages of SCIP
@@ -35,7 +35,7 @@
 
 
 #define SCIP_VERSION                100 /**< SCIP version number (multiplied by 100 to get integer number) */
-#define SCIP_SUBVERSION               1 /**< SCIP sub version number */
+#define SCIP_SUBVERSION               2 /**< SCIP sub version number */
 #define SCIP_COPYRIGHT   "Copyright (c) 2002-2007 Konrad-Zuse-Zentrum fuer Informationstechnik Berlin (ZIB)"
 
 
